--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -11,11 +12,12 @@
     <title>TextAnalysis | Home</title>
   </head>
   <body>
-
+    <div class="container">
 
     {% block body %}
     
     {% endblock %}
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
